# InfoEserciziTeoria

./: README.md  autore.cpp  autore.h  libreria.cpp  libreria.h  libro.cpp  libro.h
Classe Ambulatorio Medico/: Base.cpp  Medico.cpp  Paziente.cpp  Persona.cpp  base.h  paziente.h
ClasseBST/: a.out  bst.cpp
Coding/Esercizio Barattoli di marmellata/: BarattoloDiMarmellata.cpp  CMakeLists.txt  Queue.cpp  nodo.h  pila.h
DBPatenti/: DBPatenti.sql  query  schemaLogico
Esercizio BST Cars (chechew)/: Cars.cpp  cars.h
Esercizio BST Date/: Data.cpp  Esercizio BST Date.cpp  TreeNode.cpp  bst.h  treenode.h
Esercizio BST Product/: BST.cpp  Node.cpp  Product.cpp  TreeNode.cpp  bst.h  list.h  node.h  product.h
Esercizio Barattoli di marmellata/: Data.cpp  Nodo.cpp  Pila.cpp  barattoloDiMarmellata.h  data.h  main.cpp  queue.h
Esercizio Classe Ambulatorio Medico/: base.h  data.h  paziente.h  persona.h
Esercizio Classe BST/: bst.cpp  bst.h  main.cpp
Esercizio Classe Calendario/: Calendario.cpp  Data.cpp  a.out  calendario.h  data.h
Esercizio Classe Carta & MazzoDiCarte/: Carta.cpp  MazzoDiCarte.cpp  Napoletano.cpp  carta.h  main.cpp  napoletano.h
Esercizio Classe Cerchio/: ClasseCerchio.h  README.md  classeCerchio.cpp
Esercizio Classe Data/: Data.cpp  README.md  a.out  main.cpp
Esercizio Classe DateTime/: Data.cpp  data.h  datetime.h
Esercizio Classe Frazione/: README.md  a.out  frazione.h  main.cpp
Esercizio Classe Libreria/: libreria.h  libro.cpp  libro.h
Esercizio Classe Orario/: Orario.cpp  a.out  main.cpp  orario.h
Esercizio Classe Persona/: a.out  (+3 more)
(+142 files in other folders)
